--- a/css/stilos.css
+++ b/css/stilos.css
@@ -12,8 +12,8 @@ body {
     width: 70%;
     padding: 1em;
     text-align: left;
-    border: 1px solid #DDD;
-    margin: 0 auto;
+    border: 5px solid #000;
+    margin: 5 auto;
 }
 
 #container h1
