--- a/css/stilos.css
+++ b/css/stilos.css
@@ -7,10 +7,20 @@ body {
     padding: 0;
 }
 
+#cabecera
+{
+    background: #33A;
+    color: white;
+    margin: 0;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
+    font-weight: bold;
+    padding: 0.5em;
+
+}
 #container 
 {
     width: 70%;
-    padding: 1em;
+    padding: 0;
     text-align: left;
     border: 5px solid #000;
     margin: 5 auto;
@@ -19,4 +29,17 @@ body {
 #container h1
 {
     font-size: 20px;
+}
+
+#cabecera #tagline
+{
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
+
+}
+#post
+{
+    padding: 1em;
+
 }
