--- a/css/stilos.css
+++ b/css/stilos.css
@@ -1,4 +1,6 @@
-body {
+body
+{
+    background: #1e1f24;
     color: #333;
     text-align: center;
     font-family: Arial;
@@ -9,26 +11,18 @@ body {
 
 #cabecera
 {
-    background: #33A;
-    color: white;
-    margin: 0;
+    background: #37488b;
     box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
+    color: white;
     font-weight: bold;
+    margin: 0;
     padding: 0.5em;
-
-}
-#container 
-{
-    width: 70%;
-    padding: 0;
-    text-align: left;
-    border: 5px solid #000;
-    margin: 5 auto;
 }
 
-#container h1
+#cabecera #logo
 {
-    font-size: 20px;
+    width: 20px;
+    vertical-align: middle;
 }
 
 #cabecera #tagline
@@ -36,10 +30,23 @@ body {
     padding: 0 0 0 1em;
     font-weight: normal;
     font-size: 0.8em;
+}
 
+#container
+{
+    width: 70%;
+    padding: 0;
+    text-align: left;
+    border: 1px solid #DDD;
+    margin: 0 auto;
+}
+
+#container h1
+{
+    font-size: 20px;
 }
 #post
 {
+    background: white;
     padding: 1em;
-
 }
